Fix spacing for focus interaction (repeated in 3 places?)

--- a/public/stylesheets/qti/directives/web/focusTaskInteraction.css
+++ b/public/stylesheets/qti/directives/web/focusTaskInteraction.css
@@ -111,7 +111,7 @@ width:82px;
 }
 .focus-container {
 	border-radius: 4px;
-    width: 560px;
+    width: 512px;
     height: auto;
     background: url("/assets/images/header-dark-grey-br-1.png") repeat scroll center top transparent;
     -moz-user-select: none;
